# rust_novel_rss

./: Cargo.toml  README.md
src/: feed_handler.rs  main.rs  novel_structs.rs
