[package]
name = "rust_novel_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rss = "2.0.8"
log = "0.4.22"
rouille = "3.6.2"
reqwest = {  version="0.12.5" , features = ["blocking"]}
shell-words = "1.1.0"
